# HaskellNyumon

./: README.md  note.md
Ch01/: Ch01.cabal  README.md  package.yaml
Ch01/src/: ex1-1-4.hs  ex1-1-5.hs  hello.hs  number.hs
Ch02/: Ch02.cabal  package.yaml
Ch02/src/: Params.hs  doblock.hs  ex2-5_1.hs  ex2-5_2.hs  fizz-buzz.hs  fizz-buzz2.hs  fizz-buzz3.hs  lazy-pattern.hs  main.hs  myapp.hs  myapp2.hs  sample1.hs  sample2.hs  sample3.hs  toplevel.hs
Ch02/src/MyApp/: SomeModule.hs
Ch03/: Ch03.cabal  package.yaml
Ch03/src/: Main.hs  color.hs  dict.hs  employee.hs  option.hs  type.hs  typeclass.hs
Ch04/: Ch04.cabal  README.md  package.yaml
Ch04/Ch05/: Ch05.cabal  package.yaml
Ch04/src/: Main.hs  args.hs  bits.hs  buffermode.hs  dir.hs  error.hs  exception.hs  lazyio.hs  openfile.hs  permission.hs  posix.hs  sample.txt  throw.hs
Ch05/: Ch05.cabal  README.md  package.yaml
Ch05/src/: countup.hs  eSafeDiv.hs  end.hs  exSafeDiv.hs  forM.hs  game.hs  human.hs  lb.hs  mSafeDiv.hs  maybe.hs  monadTrans.hs  mtlSample.hs  points.hs  pow.hs  reader.hs  reji.hs  state.hs  stref.hs  stuarray.hs
Ch06/: Ch06.cabal  README.md  package.yaml
Ch06/src/: concat.hs  erdos.hs  fd.hs  fizzbuzz.hs  reader-mtl.hs  reader.hs  triple.hs
Ch07/: Ch07.cabal  package.yaml
Ch07/src/: aeson.hs  aeson2.hs  aeson3.hs  aeson4.hs  aeson5.hs  lens.hs  mvector.hs  mvector2.hs  operational.hs  os.hs  parser.hs  parser2.hs  parser3.hs  parser4.hs  pipes.hs  time.hs  vector.hs  vectorConv.hs
Ch08/: Ch08.cabal  README.md  package.yaml
Ch08/src/: Lock.hs  Main.hs  Mvar.hs  Qsem.hs  Stm.hs  Stm2.hs  async.hs  exception-stm.hs  exception.hs  mask.hs  monad-par.hs  safe-exception.hs  strategies.hs  withAsync.hs  withAsync2.hs  withAsync3.hs
Ch09/: Ch09.cabal  README.md  package.yaml
auction/: auction.cabal  stack.yaml
auction/app/: counter.hs
auction/src/Auction/: Server.hs  Types.hs
hjq/: hjq.cabal
hjq/app/: Main.hs
hjq/src/Data/: Hjq.hs
hjq/src/Data/Hjq/: Parser.hs  Query.hs
hjq/test/: Spec.hs
weight-recorder/: stack.yaml  weight-recorder.cabal  weight.db
weight-recorder/app/: Main.hs
weight-recorder/data/: schema.sql
weight-recorder/src/Entity/: User.hs  WeightRecord.hs
weight-recorder/src/Model/: User.hs  WeightRecord.hs
weight-recorder/src/Web/: Core.hs  WeightRecorder.hs
weight-recorder/src/Web/Action/: Login.hs  NewRecord.hs  Register.hs
weight-recorder/src/Web/View/: Main.hs  Start.hs
weight-recorder/templates/: main.mustache  start.mustache
